fixes on mobile version

--- a/styles/informations.css
+++ b/styles/informations.css
@@ -87,3 +87,9 @@
 	} */
 
 }
+
+@media screen and (width < 600px) {
+	#informacje .time {
+		margin-left: 0px;
+	}
+}
